Source/Alternet.UI.Pal/Api/Calendar.Api.h

ALTERNET_UI_API void Calendar_ResetAttr_(Calendar* obj, int day)
{
    MarshalExceptions<void>([&](){
        obj->ResetAttr(day);
    });
}
ALTERNET_UI_API void Calendar_EnableHolidayDisplay_(Calendar* obj, c_bool display)
{
    MarshalExceptions<void>([&](){
        obj->EnableHolidayDisplay(display);
    });
}
ALTERNET_UI_API void Calendar_SetHoliday_(Calendar* obj, int day)
{
    MarshalExceptions<void>([&](){
        obj->SetHoliday(day);
    });
}
ALTERNET_UI_API void* Calendar_GetMarkDateAttr_()
{
    return MarshalExceptions<void*>([&](){
        return Calendar::GetMarkDateAttr();
    });
}
ALTERNET_UI_API void Calendar_SetMarkDateAttr_(void* dateAttr)
{
    MarshalExceptions<void>([&](){
        Calendar::SetMarkDateAttr(dateAttr);
    });
}
ALTERNET_UI_API void* Calendar_CreateDateAttr_(int border)
{
    return MarshalExceptions<void*>([&](){
        return Calendar::CreateDateAttr(border);
    });
}
ALTERNET_UI_API void Calendar_DeleteDateAttr_(void* handle)
{
    MarshalExceptions<void>([&](){
        Calendar::DeleteDateAttr(handle);
    });
}
ALTERNET_UI_API void Calendar_DateAttrSetTextColor_(void* handle, Color colText)
{
    MarshalExceptions<void>([&](){
        Calendar::DateAttrSetTextColor(handle, colText);
    });
}
ALTERNET_UI_API void Calendar_DateAttrSetBackgroundColor_(void* handle, Color colBack)
{
    MarshalExceptions<void>([&](){
        Calendar::DateAttrSetBackgroundColor(handle, colBack);
    });
}
ALTERNET_UI_API void Calendar_DateAttrSetBorderColor_(void* handle, Color color)
{
    MarshalExceptions<void>([&](){
        Calendar::DateAttrSetBorderColor(handle, color);
    });
}
ALTERNET_UI_API void Calendar_DateAttrSetFont_(void* handle, void* font)
{
    MarshalExceptions<void>([&](){
        Calendar::DateAttrSetFont(handle, font);
    });
}
ALTERNET_UI_API void Calendar_DateAttrSetBorder_(void* handle, int border)
{
    MarshalExceptions<void>([&](){
        Calendar::DateAttrSetBorder(handle, border);
    });
}
ALTERNET_UI_API void Calendar_DateAttrSetHoliday_(void* handle, c_bool holiday)
{
    MarshalExceptions<void>([&](){
        Calendar::DateAttrSetHoliday(handle, holiday);
    });
}
ALTERNET_UI_API c_bool Calendar_DateAttrHasTextColor_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return Calendar::DateAttrHasTextColor(handle);
    });
}
ALTERNET_UI_API c_bool Calendar_DateAttrHasBackgroundColor_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return Calendar::DateAttrHasBackgroundColor(handle);
    });
}
ALTERNET_UI_API c_bool Calendar_DateAttrHasBorderColor_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return Calendar::DateAttrHasBorderColor(handle);
    });
}
ALTERNET_UI_API c_bool Calendar_DateAttrHasFont_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return Calendar::DateAttrHasFont(handle);
    });
}
ALTERNET_UI_API c_bool Calendar_DateAttrHasBorder_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return Calendar::DateAttrHasBorder(handle);
    });
}
ALTERNET_UI_API c_bool Calendar_DateAttrIsHoliday_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
        return Calendar::DateAttrIsHoliday(handle);
    });
}
ALTERNET_UI_API Color_C Calendar_DateAttrGetTextColor_(void* handle)
{
    return MarshalExceptions<Color_C>([&](){
        return Calendar::DateAttrGetTextColor(handle);
    });
}
ALTERNET_UI_API Color_C Calendar_DateAttrGetBackgroundColor_(void* handle)
{
    return MarshalExceptions<Color_C>([&](){
        return Calendar::DateAttrGetBackgroundColor(handle);
    });
}
ALTERNET_UI_API Color_C Calendar_DateAttrGetBorderColor_(void* handle)
{
    return MarshalExceptions<Color_C>([&](){
        return Calendar::DateAttrGetBorderColor(handle);
    });
}
ALTERNET_UI_API void* Calendar_DateAttrGetFont_(void* handle)
{
    return MarshalExceptions<void*>([&](){
        return Calendar::DateAttrGetFont(handle);
    });
}
ALTERNET_UI_API int Calendar_DateAttrGetBorder_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return Calendar::DateAttrGetBorder(handle);
    });
}